--- a/java/build.gradle
+++ b/java/build.gradle
@@ -9,6 +9,14 @@ repositories {
 
 dependencies {
     compile 'org.apache.activemq:activemq-client:5.11.1'
+
+    testCompile ('junit:junit:4.12') {
+        exclude module : 'hamcrest-core'
+    }
+    testCompile ("org.mockito:mockito-core:1.10.19") {
+        exclude module : 'hamcrest-core'
+    }
+    testCompile "org.hamcrest:hamcrest-all:1.3"
 }
 
 
