Exposed the broker JMX port

--- a/broker/activemq-wrapper.properties
+++ b/broker/activemq-wrapper.properties
@@ -10,4 +10,4 @@ DESTINATION_URL=file://${SCRIPT_FOLDER}/local-distributions/apache-activemq-5.11
 # WS:       21614
 #
 # WebConsole: 28161
-# JMX port: 20011, test-activemq.domain
+# JMX port: 20011  jmxDomainName=activemq.test.instance -> TEST.BROKER
