--- a/java/build.gradle
+++ b/java/build.gradle
@@ -8,6 +8,7 @@ repositories {
 }
 
 dependencies {
+    compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'com.google.guava:guava:18.0'
     compile 'org.apache.activemq:activemq-client:5.11.1'
 
