--- a/java/build.gradle
+++ b/java/build.gradle
@@ -15,10 +15,10 @@ dependencies {
     testCompile ('junit:junit:4.12') {
         exclude module : 'hamcrest-core'
     }
-    testCompile ("org.mockito:mockito-core:1.10.19") {
+    testCompile ('org.mockito:mockito-core:1.10.19') {
         exclude module : 'hamcrest-core'
     }
-    testCompile "org.hamcrest:hamcrest-all:1.3"
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
 }
 
 
