--- a/java/build.gradle
+++ b/java/build.gradle
@@ -19,6 +19,7 @@ dependencies {
         exclude module : 'hamcrest-core'
     }
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'com.github.stefanbirkner:system-rules:1.11.0'
 }
 
 
