Generating a POM file inside Gradle

--- a/java/build.gradle
+++ b/java/build.gradle
@@ -4,18 +4,15 @@ apply plugin: 'java'
 buildscript {
     repositories {
         mavenCentral()
-        jcenter()
     }
     dependencies {
         classpath "net.saliman:gradle-cobertura-plugin:2.2.8"
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
     }
 }
 
 //~~~~ Settings for the source code
 sourceCompatibility = 1.8
-name = 'tdl-client-java'
 group = 'ro.ghionoiu'
 version = releaseVersion
 
@@ -79,23 +76,9 @@ jar {
  *    - Created request for jcenter ( response comes in a day )
  */
 apply plugin: 'maven'
-apply plugin: 'com.jfrog.bintray'
 
 private String readSystem(String property) {
     System.getenv(property) != null  ? System.getenv(property) : "unset"
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            name = 'bintray-julianghionoiu-tdl-client-java'
-            repository(id: 'bintray-julianghionoiu-osgb36-tdl-client-java',
-                       url: 'https://api.bintray.com/maven/julianghionoiu/maven/tdl-client-java') {
-                authentication(userName: readSystem("BINTRAY_USER"), password: readSystem("BINTRAY_KEY"))
-            }
-            pom.artifactId = 'tdl-client-java'
-        }
-    }
 }
 
 configurations {
@@ -117,41 +100,40 @@ artifacts {
     published javadocJar
 }
 
-bintray {
-    user = readSystem("BINTRAY_USER")
-    key = readSystem("BINTRAY_KEY")
+uploadArchives {
+    repositories.mavenDeployer {
+        name = 'bintray-julianghionoiu-tdl-client-java'
+        configuration = configurations.published
+        repository(id: 'bintray-julianghionoiu-osgb36-tdl-client-java',
+                url: 'https://api.bintray.com/maven/julianghionoiu/maven/tdl-client-java') {
+            authentication(userName: readSystem("BINTRAY_USER"), password: readSystem("BINTRAY_KEY"))
+        }
 
-    configurations = ['published']
+        pom.project {
+            name 'Java client for TDL system'
+            description 'A Java client that allows users to get up to speed with the TDL system.'
+            url 'https://github.com/julianghionoiu/tdl-client-java'
 
-    dryRun = false //Whether to run this as dry-run, without deploying
-    publish = true //If version should be auto published after an upload
-
-    //Package configuration. The plugin will use the repo and name properties to check if the package already exists. In that case, there's no need to configure the other package properties (like userOrg, desc, etc).
-    pkg {
-        repo = 'maven'
-        name = 'tdl-client-java'
-        desc = 'A Java client that allows users to get up to speed with the TDL system.'
-        websiteUrl = 'https://github.com/julianghionoiu/tdl-client-java'
-        issueTrackerUrl = 'https://github.com/julianghionoiu/tdl-client-java/issues'
-        vcsUrl = 'https://github.com/julianghionoiu/tdl-client-java'
-        licenses = ['GPL-3.0']
-        labels = ['activemq-client', 'kata']
-        publicDownloadNumbers = false
-
-        version {
-            name = releaseVersion //Bintray logical version name
-            vcsTag = 'v'+releaseVersion
-
-            //Configuration for GPG signing
-            gpg {
-                sign = true //Determines whether to GPG sign the files. The default is false
+            developers {
+                developer {
+                    name 'Iulian (Julian) Ghionoiu'
+                    email 'iulian.ghionoiu@gmail.com'
+                    organization 'Iulian Ghionoiu'
+                    organizationUrl 'https://github.com/julianghionoiu'
+                }
             }
 
-            //Configuration for Maven Central sync of the version
-            mavenCentralSync {
-                sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
-//                user = 'userToken' //OSS user token
-//                password = 'paasword' //OSS user password
+            scm {
+                connection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
+                developerConnection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
+                url 'git@github.com:julianghionoiu/tdl-client-java.git'
+            }
+
+            licenses {
+                license {
+                    name 'GNU General Public License, Version 3.0'
+                    url 'http://www.gnu.org/licenses/gpl-3.0.txt'
+                }
             }
         }
     }
