--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ apply plugin: 'com.github.kt3k.coveralls'
 cobertura {
     coverageFormats = ['html', 'xml']
     coverageIncludes = ['.*tdl.client.*']
+    coverageExcludes = ['.*tdl.examples.*']
     coverageIgnores = ['.*org.slf4j.Logger.*']
 }
 test.finalizedBy(project.tasks.cobertura)
