Adjusting the release script

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,4 @@
-releaseVersion=0.0.11
+# We are using semantic versioning
+# MAJOR.MINOR version comes from the version of the Spec
+previousReleaseVersion=0.0.11
+currentPatchVersion=1
