--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-# We are using semantic versioning
-# MAJOR.MINOR version comes from the version of the Spec
-previousReleaseVersion=0.0.11
-currentPatchVersion=1
+previousVersion=0.0.11
+# the current MAJOR.MINOR version is dynamically computed from the version of the Spec
+currentPatchVersion=0
