--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,2 @@
 previousVersion=0.1.1
-# the current MAJOR.MINOR version is dynamically computed from the version of the Spec
-currentPatchVersion=2
+# the current MAJOR.MINOR.PATCH version is dynamically computed from the version of the Spec and previous patch
