--- a/build.gradle
+++ b/build.gradle
@@ -87,9 +87,9 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'com.google.guava:guava:18.0'
     compile 'org.apache.activemq:activemq-client:5.11.1'
+    compile 'com.google.code.gson:gson:2.4'
 
     testCompile libraries.cucumber
-    testCompile 'com.google.code.gson:gson:2.3.1'
     testCompile 'org.apache.httpcomponents:httpclient:4.5'
     testCompile ('junit:junit:4.12') {
         exclude module : 'hamcrest-core'
