--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
 sourceCompatibility = 1.8
 group = 'ro.ghionoiu'
 
+
+//~~~~~~ Compute versions
+//DEBT: Should move this into a separate Gradle file
+
 class Version {
     int major
     int minor
@@ -51,12 +55,11 @@ class Version {
     }
 }
 
-//~~~~~~ Compute version
+// Get Spec version from Git
 def specFolder = file("${projectDir}/src/test/resources/tdl/client")
 def git_describe_process = ['sh', '-c', "git --git-dir ${specFolder}/.git describe --all"]
         .execute()
 
-// Get Spec version from Git
 def sout = new StringBuffer(), serr = new StringBuffer()
 git_describe_process.consumeProcessOutput(sout, serr)
 git_describe_process.waitForOrKill(1000)
@@ -70,7 +73,7 @@ if (git_describe_process.exitValue() == 0 ) {
 
 // Compute next version
 ext.previousVersionObj = Version.fromString(previousVersion)
-def newSpecVersionObj = Version.fromString(majorMinorVersion+".0")
+def newSpecVersionObj = Version.fromString(majorMinorVersion+".1")
 if (newSpecVersionObj.higherThan(ext.previousVersionObj)) {
     ext.currentVersionObj = newSpecVersionObj
 } else {
