--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ dependencies {
         exclude module : 'hamcrest-core'
     }
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'net.trajano.commons:commons-testing:1.0.1'
     testCompile 'com.github.stefanbirkner:system-rules:1.11.0'
 }
 
