--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'org.apache.activemq:activemq-client:5.11.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
 
     testCompile libraries.cucumber
     testCompile 'org.apache.httpcomponents:httpclient:4.5'
@@ -115,6 +116,8 @@ dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'net.trajano.commons:commons-testing:1.0.1'
     testCompile 'com.github.stefanbirkner:system-rules:1.11.0'
+
+    testCompile "com.github.tomakehurst:wiremock-standalone:2.12.0"
 }
 
 // ~~~~~ Gather coverage
