--- a/build.gradle
+++ b/build.gradle
@@ -206,7 +206,7 @@ uploadArchives {
 
             scm {
                 connection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
-                developerConnection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
+                developerConnection 'scm:git:gpythoit@github.com:julianghionoiu/tdl-client-java.git'
                 url 'git@github.com:julianghionoiu/tdl-client-java.git'
             }
 
@@ -218,25 +218,4 @@ uploadArchives {
             }
         }
     }
-}
-
-
-// run downloaded wiremock standalone jar
-
-configurations {
-    wiremock
-}
-
-dependencies {
-    wiremock "com.github.tomakehurst:wiremock-standalone:2.12.0"
-}
-
-task runWiremock(type: JavaExec) {
-    main="-jar";
-    args = [
-            configurations.wiremock.files[0].toString(),
-            "--port",
-            "8222"
-    ]
-    workingDir = configurations.wiremock.files[0].getParent()
 }
