WIP - some changes to runner, sketching out fulfilling the feature file [skip ci]

--- a/build.gradle
+++ b/build.gradle
@@ -206,7 +206,7 @@ uploadArchives {
 
             scm {
                 connection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
-                developerConnection 'scm:git:gpythoit@github.com:julianghionoiu/tdl-client-java.git'
+                developerConnection 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
                 url 'git@github.com:julianghionoiu/tdl-client-java.git'
             }
 
