--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/test/resources/tdl/client"]
 	path = src/test/resources/tdl/client
 	url = git@github.com:julianghionoiu/tdl-client-spec.git
+[submodule "wiremock"]
+	path = wiremock
+	url = https://github.com/julianghionoiu/tdl-client-test-wiremock
