--- a/build.gradle
+++ b/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile 'com.google.guava:guava:18.0'
     compile 'org.apache.activemq:activemq-client:5.11.1'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.mashape.unirest:unirest-java:1.4.9'
 
     testCompile libraries.cucumber
     testCompile 'org.apache.httpcomponents:httpclient:4.5'
