Getting the tests to go green after running it against ElasticMQ server (AmazonSQS) from using ActiveMQ - still a lot of hard-coding and hard-wiring, all green tests!!!

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "wiremock"]
 	path = wiremock
 	url = git@github.com:julianghionoiu/tdl-client-test-wiremock.git
+[submodule "local-sqs"]
+	path = local-sqs
+	url = git@github.com:julianghionoiu/tdl-local-sqs.git
