--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,15 @@ apply plugin: 'java'
 buildscript {
     repositories {
         mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+
     }
     dependencies {
         classpath "net.saliman:gradle-cobertura-plugin:2.2.8"
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.13"
     }
 }
 
@@ -32,7 +37,9 @@ class Version {
 
     static Version fromString(versionString) {
         def (String major, String minor, String patch) = versionString.tokenize( '.' )
-        new Version(major.toInteger(), minor.toInteger(), patch.toInteger())
+        new Version(major.toInteger(),
+                    minor.isInteger() ? minor.toInteger() : 0,
+                    patch.toInteger())
     }
 
     boolean higherThan(Version otherVersion) {
@@ -98,6 +105,11 @@ ext.libraries = [
     ]
 ]
 
+ext {
+    jacksonVersion = '2.8.4'
+}
+
+apply plugin: "net.ltgt.apt"
 dependencies {
     compile 'ch.qos.logback:logback-classic:1.1.3'
     compile 'com.google.guava:guava:18.0'
@@ -105,6 +117,20 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
 
+    compile 'com.amazonaws:aws-java-sdk-sqs:1.11.253'
+    compile 'com.typesafe:config:1.3.1'
+    compile 'org.apache.commons:commons-csv:1.5'
+
+    compile 'com.fasterxml.jackson.core:jackson-core:'+jacksonVersion
+    compile 'com.fasterxml.jackson.core:jackson-databind:'+jacksonVersion
+    compile 'com.fasterxml.jackson.core:jackson-annotations:'+jacksonVersion
+    compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.slf4j:log4j-over-slf4j:1.7.25'
+    compile 'org.reflections:reflections:0.9.11'
+
+    compile 'org.projectlombok:lombok:1.16.20'
+    apt "org.projectlombok:lombok:1.16.20"
+    
     testCompile libraries.cucumber
     testCompile 'org.apache.httpcomponents:httpclient:4.5'
     testCompile ('junit:junit:4.12') {
