Queue is dynamically created (name of the queue is picked from the application.conf file), amended the config file for the test to work. Also remove test that checks for existence of queue

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,4 +4,6 @@ sqs {
   accessKey = "x"
   secretKey = "y"
   queueUrl = "http://localhost:28161/queue/testuser.req"
+  requestQueueName = "testuser-req"
+  responseQueueName = "testuser-resp"
 }
