Removed ClientAction implementation from all across implementation and test code (#8)
* Removed ClientAction implementation from all across implementation and test code

* Rename then() to build() in ProcessingRules.java

*   Added the "(NOT PUBLISHED)" label to use cases when errors occur (when response type is FatalErrorResponse)

* Removed redundant line from stop script and also 'added ||' true to smoother errors

* Added better method for termination of process via stop script

* Some refactorings to prepare injecting queue names via constructor

* Removing a part of the test that checks for specific queue names, this will be an issue when different implementations use different queue names - also checking for queue names isn't really a test

* Updated changes to the acceptance test spec from tdl-client-spec

* Bringing QueueSteps in line with QueueRunner.feature

* Correction the regex string for the @Given clause in QueueSteps.java to catch the correct Background in QueueRunner.feature

* Update implementation to work with the latest version of the Spec

--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,6 @@ buildscript {
     repositories {
         mavenCentral()
     }
-    dependencies {
-        classpath "net.saliman:gradle-cobertura-plugin:2.2.8"
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
-    }
 }
 
 //~~~~ Settings for the source code
@@ -32,7 +28,9 @@ class Version {
 
     static Version fromString(versionString) {
         def (String major, String minor, String patch) = versionString.tokenize( '.' )
-        new Version(major.toInteger(), minor.toInteger(), patch.toInteger())
+        new Version(major.toInteger(),
+                    minor.isNumber() ? minor.toInteger() : 0,
+                    patch.toInteger())
     }
 
     boolean higherThan(Version otherVersion) {
@@ -117,19 +115,6 @@ dependencies {
     testCompile 'net.trajano.commons:commons-testing:1.0.1'
     testCompile 'com.github.stefanbirkner:system-rules:1.11.0'
 }
-
-// ~~~~~ Gather coverage
-
-apply plugin: "net.saliman.cobertura"
-apply plugin: 'com.github.kt3k.coveralls'
-
-cobertura {
-    coverageFormats = ['html', 'xml']
-    coverageIncludes = ['.*tdl.client.*']
-    coverageExcludes = ['.*tdl.examples.*']
-    coverageIgnores = ['.*org.slf4j.Logger.*']
-}
-test.finalizedBy(project.tasks.cobertura)
 
 //~~~~~ Making the library deployable
 
