--- a/build.gradle
+++ b/build.gradle
@@ -19,20 +19,21 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.4'
     implementation 'com.mashape.unirest:unirest-java:1.4.9'
 
-    testImplementation 'org.apache.httpcomponents:httpclient:4.5'
     testImplementation ('org.junit.jupiter:junit-jupiter:5.9.1') {
         exclude module : 'hamcrest-core'
     }
+    testImplementation("org.junit.platform:junit-platform-suite:1.8.1")
+    testImplementation 'org.apache.httpcomponents:httpclient:4.5'
     testImplementation ('org.mockito:mockito-core:1.10.19') {
         exclude module : 'hamcrest-core'
     }
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testImplementation 'net.trajano.commons:commons-testing:1.0.1'
     testImplementation 'com.github.stefanbirkner:system-rules:1.11.0'
-    testImplementation 'info.cukes:cucumber-java:1.2.4'
-    testImplementation 'info.cukes:cucumber-junit:1.2.4'
-    testImplementation 'info.cukes:cucumber-picocontainer:1.2.4'
 
+    testImplementation 'io.cucumber:cucumber-java:7.12.0'
+    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.12.0'
+    testImplementation 'io.cucumber:cucumber-picocontainer:7.12.0'
 }
 
 application {
@@ -41,6 +42,7 @@ application {
 
 test {
     useJUnitPlatform()
+    systemProperty("cucumber.junit-platform.naming-strategy", "long")
     testLogging {
         events "passed", "skipped", "failed"
     }
