--- a/build.gradle
+++ b/build.gradle
@@ -13,23 +13,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'ch.qos.logback:logback-classic:1.1.3'
-    implementation 'com.google.guava:guava:18.0'
-    implementation 'org.apache.activemq:activemq-client:5.11.1'
-    implementation 'com.google.code.gson:gson:2.4'
-    implementation 'com.mashape.unirest:unirest-java:1.4.9'
+    implementation 'ch.qos.logback:logback-classic:1.2.9'
+    implementation 'com.google.guava:guava:30.0-jre'
+    implementation 'org.apache.activemq:activemq-client:5.15.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
+//    implementation 'com.mashape.unirest:unirest-java:1.4.9'
 
     testImplementation ('org.junit.jupiter:junit-jupiter:5.9.1') {
         exclude module : 'hamcrest-core'
     }
     testImplementation("org.junit.platform:junit-platform-suite:1.8.1")
-    testImplementation 'org.apache.httpcomponents:httpclient:4.5'
     testImplementation ('org.mockito:mockito-core:1.10.19') {
         exclude module : 'hamcrest-core'
     }
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
-    testImplementation 'net.trajano.commons:commons-testing:1.0.1'
-    testImplementation 'com.github.stefanbirkner:system-rules:1.11.0'
 
     testImplementation 'io.cucumber:cucumber-java:7.12.0'
     testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.12.0'
