--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,9 @@ dependencies {
     implementation 'com.google.guava:guava:30.0-jre'
     implementation 'org.apache.activemq:activemq-client:5.15.6'
     implementation 'com.google.code.gson:gson:2.8.9'
-//    implementation 'com.mashape.unirest:unirest-java:1.4.9'
 
-    testImplementation ('org.junit.jupiter:junit-jupiter:5.9.1') {
-        exclude module : 'hamcrest-core'
-    }
-    testImplementation("org.junit.platform:junit-platform-suite:1.8.1")
-    testImplementation ('org.mockito:mockito-core:1.10.19') {
-        exclude module : 'hamcrest-core'
-    }
+    testImplementation('org.junit.jupiter:junit-jupiter:5.9.1')
+    testImplementation('org.junit.platform:junit-platform-suite:1.8.1')
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
     testImplementation 'io.cucumber:cucumber-java:7.12.0'
