Remove dependency on Guava

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,1 @@
-previousVersion=0.26.2
-# the current MAJOR.MINOR.PATCH version is dynamically computed from the version of the Spec and previous patch
+version=0.26.4
