--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 plugins {
-    id 'java'
+    // Ref here: https://docs.gradle.org/7.4.1/userguide/publishing_setup.html
+    id 'java-library'
+    id 'signing'
     id 'maven-publish'
-    id 'application'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
+
+group = 'ro.ghionoiu'
+version = project.version.toString()
 
 repositories {
     mavenCentral()
@@ -14,7 +18,6 @@ repositories {
 
 dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.9'
-    implementation 'com.google.guava:guava:30.0-jre'
     implementation 'org.apache.activemq:activemq-client:5.15.6'
     implementation 'com.google.code.gson:gson:2.8.9'
 
@@ -27,14 +30,73 @@ dependencies {
     testImplementation 'io.cucumber:cucumber-picocontainer:7.12.0'
 }
 
-application {
-    mainClass = 'one.microproject.filescompare.Main'
-}
-
 test {
     useJUnitPlatform()
     systemProperty("cucumber.junit-platform.naming-strategy", "long")
     testLogging {
         events "passed", "skipped", "failed"
     }
+}
+
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
+// Suppress Javadoc warnings
+javadoc {
+    options.addStringOption('Xdoclint:none', '-quiet')
+}
+
+// Refs:
+// https://stackoverflow.com/a/68505768
+publishing {
+    publications {
+        release(MavenPublication) {
+            from components.java
+            pom {
+                name = 'Java client for TDL system'
+                description = 'A Java client that allows users to get up to speed with the TDL system.'
+                url = 'https://github.com/julianghionoiu/tdl-client-java'
+                licenses {
+                    license {
+                        name = 'Apache License, Version 2.0'
+                        url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                developers {
+                    developer {
+                        name = 'Iulian (Julian) Ghionoiu'
+                        email = 'iulian.ghionoiu@gmail.com'
+                        organization = 'Iulian Ghionoiu'
+                        organizationUrl = 'https://github.com/julianghionoiu'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
+                    developerConnection = 'scm:git:git@github.com:julianghionoiu/tdl-client-java.git'
+                    url = 'git@github.com:julianghionoiu/tdl-client-java.git'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            url = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
+            credentials {
+                username = project.findProperty('mavenCentralUsername')
+                password = project.findProperty('mavenCentralPassword')
+            }
+        }
+    }
+}
+
+// Signs using gpg-agent
+// Key name configured under "~/.gradle/gradle.properties"
+//
+// Refs:
+// https://docs.gradle.org/7.4.1/userguide/signing_plugin.html#sec:using_gpg_agent
+signing {
+    useGpgCmd()
+    sign publishing.publications.release
 }
