--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,22 @@ repositories {
 }
 
 dependencies {
-    implementation 'ch.qos.logback:logback-classic:1.2.9'
-    implementation 'org.apache.activemq:activemq-client:5.15.6'
+    implementation 'ch.qos.logback:logback-classic:1.4.12'
+    implementation 'org.apache.activemq:activemq-client:5.18.3'
+
+    implementation platform('com.fasterxml.jackson:jackson-bom:2.17.3')
+    implementation 'com.fasterxml.jackson.core:jackson-core'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    
     implementation 'com.google.code.gson:gson:2.8.9'
 
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.1')
     testImplementation('org.junit.platform:junit-platform-suite:1.8.1')
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
-    testImplementation 'io.cucumber:cucumber-java:7.12.0'
-    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.12.0'
-    testImplementation 'io.cucumber:cucumber-picocontainer:7.12.0'
+    testImplementation 'io.cucumber:cucumber-java:7.21.0'
+    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.21.0'
+    testImplementation 'io.cucumber:cucumber-picocontainer:7.21.0'
 }
 
 test {
